# bevy-webp-anim

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic.rs
src/: lib.rs  loader.rs  systems.rs  types.rs
